def get_workflow_status add return default=str

--- a/projects/unit3/github-actions-integration/starter/test.ipynb
+++ b/projects/unit3/github-actions-integration/starter/test.ipynb
@@ -5,7 +5,16 @@
    "execution_count": null,
    "id": "2c0314d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (1819004135.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mwith open('C:\\Users\\Nazaruk\\Desktop\\git_action_webook_v2\\mcp-course\\projects\\unit3\\slack-notification\\solution\\github_events.json', \"r\", encoding=\"utf-8\") as f:\u001b[39m\n                                                                                                                                      ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -16,8 +25,8 @@
     "        workflow_name: Optional specific workflow name to filter by\n",
     "    \"\"\"\n",
     "    # TODO: Implement this function\n",
-    "    with open('C:\\Users\\Nazaruk\\Desktop\\git_action_webook_v2\\mcp-course\\projects\\unit3\\slack-notification\\solution\\github_events.json', \"r\", encoding=\"utf-8\") as f:\n",
-    "            github_event_json = json.load(f)\n",
+    "    with open('C:\\\\Users\\\\Nazaruk\\\\Desktop\\\\git_action_webook_v2\\\\mcp-course\\\\projects\\\\unit3\\\\slack-notification\\\\solution\\\\github_events.json', \"r\", encoding=\"utf-8\") as f:\n",
+    "        github_event_json = json.load(f)\n",
     "            \n",
     "    workflow_run_events = []\n",
     "    for event in github_event_json:\n",
@@ -53,16 +62,6 @@
     "    \n",
     "    return json.dumps({\"message\": \"TODO: Implement get_workflow_status\"})\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08e71c41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "github_event_json = "
-   ]
   }
  ],
  "metadata": {
@@ -72,7 +71,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   }
  },
